# shuttle

./: CHANGELOG.md  Makefile  docker-compose.dev.yml  docker-compose.yml
.circleci/: config.yml
auth/: Cargo.toml
common-tests/src/: postgres.rs
common/src/: limits.rs  resource.rs
common/src/backends/: mod.rs
deployer/src/: runtime_manager.rs
deployer/src/builder/oci/distribution/: client.rs
deployer/src/deployment/: run.rs
deployer/src/handlers/: mod.rs
deployer/src/persistence/: mod.rs
deployer/src/persistence/resource/: mod.rs
gateway/: Cargo.toml
gateway/migrations/: 0000_init.sql
gateway/src/: args.rs  lib.rs  main.rs  project.rs  service.rs
gateway/src/api/: latest.rs
gateway/tests/: api.rs  create_start_stop_destroy_project.rs  end_to_end.rs  service.rs
gateway/tests/helpers/: mod.rs
orchestrator/: Cargo.toml
orchestrator/src/: client.rs  error.rs  lib.rs  main.rs
orchestrator/src/project/: mod.rs
orchestrator/src/project/docker/: container.rs  mod.rs
orchestrator/src/project/state/: machine.rs  mod.rs
proto/src/: lib.rs
